--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -170,6 +170,7 @@ img {
 
 /* ======= CUSTOM CURSOR ======= */
 .cursor {
+  display: none;
   width: 3.75rem;
   height: 3.75rem;
   border: 0.1px solid gray;
@@ -209,6 +210,11 @@ img {
   color: var(--full-dark-color);
   font-weight: bolder;
   cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .cursor {
+    display: block;
+  }
 }
 /* ======== NAVIGATION ======== */
 .logo_copyright {
@@ -305,9 +311,6 @@ img {
   animation: shine 2s infinite;
   letter-spacing: 0.7px;
 }
-/* .nav_link:hover{
-  color: var(--full-dark-color);
-} */
 
 /* NAVIGATION SMALL DEVICE  */
 .navigator_small_device {
@@ -1047,5 +1050,304 @@ image {
   .button_icon {
     font-size: var(--normal-font-size);
     margin-top: 0.5rem;
+  }
+}
+
+/* CONTACT  */
+.contactme_section {
+  width: 100%;
+  min-height: 100vh;
+  color: var(--full-bright-color);
+  position: relative;
+  overflow-x: hidden;
+}
+.contactme {
+  position: relative;
+}
+.cm_container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+.cm_info {
+  display: flex;
+  justify-content: center;
+  grid-area: 2/1/3/2;
+}
+.cm_info_content {
+  display: flex;
+  flex-direction: column;
+}
+.cm_img {
+  width: 40%;
+  justify-self: center;
+  align-self: center;
+  animation: bounceAnimation 4s infinite;
+}
+.cm_data p {
+  font-size: var(--extra-smaller-font-size);
+}
+/*========== FORM ==========*/
+.cm_form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-area: 1/1/2/2;
+}
+.cm_form_content,
+.cm_info_content {
+  width: 90%;
+}
+@media screen and (min-width: 568px) {
+  .cm_form_content,
+  .cm_info_content {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 778px) {
+  .cm_form_content,
+  .cm_info_content {
+    width: 50%;
+  }
+}
+
+.contact_heading {
+  font-size: var(--normal-font-size);
+  text-align: center;
+  margin-top: var(--mb-2);
+}
+.form {
+  position: relative;
+  margin-top: var(--mb-1);
+}
+.group {
+  position: relative;
+  margin-bottom: var(--mb-1);
+}
+
+.group textarea {
+  width: 100%;
+  padding: 0 0.2rem 0 0.2rem;
+  min-height: 10rem;
+  font-size: var(--extra-smaller-font-size);
+  border: none;
+  color: var(--full-dark-color);
+  font-family: var(--second-font-family);
+}
+.group textarea:focus {
+  border: var(--light-dark-color);
+}
+.group textarea::placeholder {
+  color: var(--full-dark-color);
+}
+
+.form input {
+  font-family: var(--second-font-family);
+  font-size: var(--normal-font-size);
+  padding: 0.5rem 0 0.5rem 0.4rem;
+  display: block;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #b1b1b1;
+  color: #b1b1b1;
+  background: rgba(0, 0, 0, 0);
+  opacity: 0.5;
+  transition: 0.2s ease;
+}
+
+.form input:focus {
+  outline: none;
+  opacity: 1;
+}
+
+.form label {
+  padding: 0.5rem 0 0.5rem 0.4rem;
+  font-family: var(--second-font-family);
+  color: #b1b1b1;
+  font-size: var(--normal-font-size);
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  bottom: 0;
+  top: 0;
+  opacity: 0.5;
+  transition: 0.2s ease all;
+}
+
+.form input:focus ~ .label,
+input:valid ~ .label {
+  top: -1rem;
+  font-size: var(--extra-smaller-font-size);
+  color: #b1b1b1;
+  opacity: 1;
+}
+
+.form .highlight {
+  position: absolute;
+  height: 60%;
+  width: 8rem;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.form input:focus ~ .highlight {
+  animation: inputHighlighter 0.3s ease;
+}
+
+@keyframes inputHighlighter {
+  from {
+    background: #b1b1b1;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
+}
+
+.form_submit {
+  font-family: "Poppins", sans-serif;
+  float: right;
+  width: 5rem;
+  height: 2rem;
+  color: #141414;
+  border-radius: 5%;
+  padding: 0.2rem 0.3rem 0.2rem 0.3rem;
+  font-weight: var(--font-medium);
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
+  font-size: var(--normal-font-size);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/*========== MEASSAGE BUTTON ==========*/
+
+.form_submit {
+  border: none;
+  transition: all 0.3s ease;
+  overflow: hidden;
+}
+.form_submit:after {
+  position: absolute;
+  content: " ";
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(315deg, white 0%, gray 74%);
+  transition: all 0.3s ease;
+}
+.form_submit:hover {
+  background: transparent;
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+  color: #fff;
+}
+.form_submit:hover:after {
+  -webkit-transform: scale(2) rotate(180deg);
+  transform: scale(2) rotate(180deg);
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+}
+@media screen and (min-width: 1024px) {
+  .cm_container {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  /* info  */
+  .cm_info {
+    position: relative;
+    display: flex;
+    width: 50%;
+    transform: skew(-20deg);
+    background: #949292;
+    border: 1px solid #949292;
+    overflow: visible;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .cm_info_cover {
+    border: 1px solid #949292;
+    top: 0;
+    left: -100vw;
+    background: #949292;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+  }
+  .cm_info_content {
+    position: relative;
+    top: 0%;
+    transform: skew(20deg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5vw;
+    margin-bottom: 5vh;
+  }
+  .cm_img {
+    width: 15vw;
+    animation: bounceAnimation 4s infinite;
+  }
+  .cm_data {
+    width: 30vw;
+  }
+  .cm_data p {
+    font-size: var(--small-font-size);
+  }
+
+  /* form  */
+  .cm_form {
+    display: flex;
+    width: 50%;
+    transform: skew(-20deg);
+    background: #141414;
+    align-items: center;
+    justify-content: center;
+  }
+  .cm_form_cover {
+    bottom: 0;
+    right: -100vw;
+    background: #141414;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+  }
+  .cm_form_content {
+    position: relative;
+    top: 0%;
+    transform: skew(20deg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 4vw;
+  }
+  .contact_heading {
+    color: var(--full-bright-color);
+    font-weight: var(--font-medium);
+    font-size: var(--normal-font-size-font-size);
+    font-family: var(--second-font-family);
+    text-align: center;
   }
 }
