created the projects page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1396,3 +1396,943 @@ input:valid ~ .label {
     text-align: center;
   }
 }
+
+/*=========================== WORK MODULE ===========================*/
+/* WORKS */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  outline: none;
+  box-sizing: border-box;
+}
+
+:root {
+  --theme-bg-color: rgba(16 18 27 / 40%);
+  --border-color: rgba(113 119 144 / 25%);
+  --theme-color: #f9fafb;
+  --inactive-color: rgb(113 119 144 / 78%);
+  --body-font: "Poppins", sans-serif;
+  --hover-menu-bg: rgba(12 15 25 / 30%);
+  --content-title-color: #999ba5;
+  --content-bg: rgb(146 151 179 / 13%);
+  --button-inactive: rgb(249 250 251 / 55%);
+  --dropdown-bg: #21242d;
+  --dropdown-hover: rgb(42 46 60);
+  --popup-bg: rgb(22 25 37);
+  --search-bg: #14162b;
+  --overlay-bg: rgba(36, 39, 59, 0.3);
+  --scrollbar-bg: rgb(1 2 3 / 40%);
+  --header-color :#121317;
+}
+
+.light-mode {
+  --theme-bg-color: rgb(255 255 255 / 31%);
+  --theme-color: #3c3a3a;
+  --inactive-color: #333333;
+  --button-inactive: #3c3a3a;
+  --search-bg: rgb(255 255 255 / 31%);
+  --dropdown-bg: #f7f7f7;
+  --overlay-bg: rgb(255 255 255 / 30%);
+  --dropdown-hover: rgb(236 236 236);
+  --border-color: rgb(255 255 255 / 35%);
+  --popup-bg: rgb(255 255 255);
+  --hover-menu-bg: rgba(255 255 255 / 35%);
+  --scrollbar-bg: rgb(255 253 253 / 57%);
+  --content-title-color: --theme-color;
+  --header-color :#cecece;
+}
+
+/*==================== WORK MODULE ====================*/
+.background_body {
+  position: relative;
+  font-family: var(--body-font);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.app {
+  background-color: var(--theme-bg-color);
+  display: flex;
+  flex-direction: column;
+  /* position: relative; */
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.projects_header {
+  z-index: var(--z-largest);
+  position: relative;
+  /* position: fixed;
+  top: 0; */
+  /* display: flex; */
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  flex-shrink: 0;
+  /* height: 58px; */
+  width: 100%;
+  border-bottom: 1px solid var(--border-color);
+  /* padding: 0 30px; */
+  white-space: nowrap;
+}
+.projects_header.scrolled {
+  position: sticky;
+  top: 0;
+  box-shadow: 0 2.5px 5px rgba(255, 255, 255, 0.854);
+  background-color: var(--header-color);
+}
+.header-menu {
+  grid-area: 2/1/3/2;
+}
+.header-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem 0 1rem;
+}
+.header-menu a {
+  /* padding: 20px 30px; */
+  font-size: var(--extra-smaller-font-size);
+  text-decoration: none;
+  color: var(--inactive-color);
+  border-bottom: 2px solid transparent;
+  transition: 0.3s;
+}
+.header-menu a.is-active,
+.header-menu a:hover {
+  color: var(--theme-color);
+  border-bottom: 2px solid var(--theme-color);
+}
+
+.work_logo {
+  /* width: 35px; */
+  width: 2rem;
+  /* margin-right: 195px; */
+  grid-area: 1/1/2/2;
+  margin: 0.7rem 0 0 0.7rem;
+}
+.dark-light {
+  /* width: 40px; */
+  width: 2.4rem;
+  height: 2.4rem;
+  /* height: 40px; */
+  background-color: var(--dropdown-bg);
+  box-shadow: -1px 3px 8px -1px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  z-index: 3;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: 1/1/2/2;
+  justify-self: flex-end;
+  margin: 0.7rem 0.7rem 0 0;
+  position: relative;
+  /* position: absolute;
+  right: 8px;
+  top: 8px; */
+}
+.dark-light span {
+  /* font-size: 1.3rem; */
+  font-size: 1rem;
+  transition: 0.5s;
+  color: #ebc815;
+  padding-top: 4px;
+}
+
+.light-mode .dark-light span {
+  color: #9c9c1f;
+}
+
+body.light-mode:before,
+body.light-mode .video-bg:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.72) 0%,
+    rgba(255, 255, 255, 0.45) 100%
+  );
+  -webkit-backdrop-filter: saturate(3);
+  backdrop-filter: saturate(3);
+}
+
+.main-header .header-menu {
+  /* margin-left: 150px; */
+}
+.main-header .header-menu a {
+  /* padding: 20px 24px; */
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.left-side {
+  display: none;
+}
+.left-side {
+  /* border-right: 1px solid var(--border-color); */
+}
+.side-category-link {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.5rem;
+  padding: 0 0.5rem 0 0.5rem;
+  border: 1px solid var(--border-color);
+  margin: 1rem 0.5rem 0 0.5rem;
+}
+.side-category-link a:hover{
+  transition: .5s;
+  color: var(--full-bright-color);
+}
+.optional-link{
+  display: none;
+}
+.side-wrapper-two {
+  margin-bottom: 1rem;
+}
+.side-title {
+  font-size: var(--extra-smaller-font-size);
+  color: var(--theme-color);
+  font-weight: var(--font-semi-bold);
+}
+.side-icon {
+  font-size: var(--normal-font-size);
+  color: var(--theme-color);
+  font-weight: var(--font-semi-bold);
+  cursor: pointer;
+  padding-top: 0.4rem;
+  transition: 0.5s;
+}
+.side-menu {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.5s ease;
+}
+
+.side-menu.show {
+  max-height: 200px;
+  /* Set your desired maximum height */
+}
+
+.side-menu {
+  display: flex;
+  flex-direction: column;
+  white-space: nowrap;
+}
+.side-menu a {
+  text-decoration: none;
+  color: var(--theme-color);
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 6px;
+  transition: 0.3s;
+}
+.side-menu a:hover {
+  background-color: var(--hover-menu-bg);
+}
+.side-menu .icon {
+  width: 16px;
+  margin-right: 8px;
+}
+.skill_icon_folder{
+  display: none;
+}
+
+.main-header {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--border-color);
+  height: 58px;
+  flex-shrink: 0;
+}
+
+.content-wrapper {
+  color: var(--theme-color);
+  background-color: var(--theme-bg-color);
+}
+/* WORK/PHOTOGRAPHY */
+.content_boxes {
+  width: 100%;
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem; */
+  display: flex;
+  flex-direction: column;
+}
+.content_box {
+  /* display: grid; */
+  display: flex;
+  flex-direction: column;
+  font-size: var(--small-font-size);
+  /* background-color: var(--content-bg); */
+  /* border-radius: 14px; */
+  /* border: 1px solid var(--theme-bg-color); */
+  /* padding: 20px; */
+  cursor: pointer;
+  transition: 0.3s ease;
+  /* justify-content: space-evenly; */
+  /* grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto; */
+  margin: 1rem 0 1rem 0;
+  color: var(--theme-color);
+}
+/* .content_box:hover {
+  transform: scale(1.02);
+  background-color: var(--theme-bg-color);
+} */
+.content_img img {
+  /* border-radius: 6px; */
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+.content_img iframe {
+  /* border-radius: 6px; */
+  width: 100%;
+  object-fit: contain;
+}
+.content_img video {
+  border-radius: 6px;
+  width: 100%;
+  object-fit: contain;
+}
+.content_detail {
+  font-family: var(--second-font-family);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+}
+.content_title {
+  color: var(--theme-color);
+  text-decoration: var(--font-medium);
+  cursor: pointer;
+  font-size: var(--normal-font-size);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.content_title:hover {
+  text-decoration: underline;
+}
+.content_disc {
+  font-size: var(--normal-font-size);
+  width: 95%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.content_date {
+  font-size: var(--normal-font-size);
+}
+.content_date span {
+  font-weight: 300;
+}
+.statys_type span{
+  position: relative;
+  top: 2px;
+}
+.read_more {
+  grid-area: 2/3/3/4;
+  margin: 0.2rem 0 0 .5rem;
+  align-self: flex-start;
+  justify-self: flex-start;
+}
+.statys_type {
+  align-items: center;
+}
+.statys_type span {
+  margin-left: 0.2rem;
+}
+.content_button {
+  width: 6rem;
+  height: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--small-font-size);
+  background: rgba(146, 151, 179, 0.466);
+  border: none;
+  outline: none;
+  border-radius: 14px;
+  transition: 0.5s;
+  padding: 1rem;
+}
+.content_button a {
+  text-decoration: none;
+  color: var(--full-bright-color);
+}
+.content_button a:hover {
+  color: rgb(126, 131, 158);
+}
+.content_button:hover {
+  transform: scale(1.1);
+  background-color: var(--theme-bg-color);
+  color: rgb(126, 131, 158);
+}
+
+@media screen and (min-width: 350px){
+  .header-menu{
+    padding: 0 15vw 0 15vw;
+  }
+  .side-category-link{
+    padding: 0 5vw 0 5vw;
+  }
+}
+@media screen and (min-width: 568px){
+  .header-menu{
+    padding: 0 1.5rem 0 1.5rem;
+  }
+  .side-category-link{
+    padding: 0 1rem 0 1rem;
+  }
+  .optional-link{
+    display: block;
+  }
+  .side-wrappers{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+  }
+  .side-wrapper{
+    width: 50%;
+    margin: 1rem;
+  }
+  .side-category-link{
+    margin: 0;
+  }
+  .side-menu{
+    width: 100%;
+    border: 1px solid var(--border-color);
+    padding: 0 1rem 0 1rem;
+  }
+  .read_more button a{
+    font-size: var(--extra-smaller-font-size);
+  }
+  .content-wrapper{
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .content_boxes {
+    justify-content: center;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50vw 50vw;
+  }
+  .content_box {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--content-bg);
+    border-radius: 14px;
+    border: 1px solid var(--theme-bg-color);
+    color: var(--theme-color);
+    margin: 1rem;
+    padding: 1rem;
+  }
+  .content_box:hover {
+    transform: scale(1.02);
+    background-color: var(--theme-bg-color);
+  }
+  .content_title{
+    font-size: var(--small-font-size);
+    font-weight: var(--font-semi-bold);
+  }
+  .content_disc{
+    font-size: var(--small-font-size);
+  }
+  .content_date{
+    font-size: var(--extra-smaller-font-size);
+  }
+  .content_status{
+    font-size: var(--extra-extra-smaller-font-size);
+  }
+  .work_logo{
+    margin-left: 1.5rem;
+    width: 2.5rem;
+  }
+  .dark-light{
+    margin-right: 1.5rem;
+  }
+  .header-menu{
+    padding: 0 10vw 0 10vw;
+  }
+}
+@media screen and (min-width: 778px){
+  .content_boxes {
+    grid-template-columns: 33vw 33vw 33vw;
+  }
+  .header-menu{
+    padding: 0 20vw 0 20vw;
+  }
+  .work_logo{
+    width: 3rem;
+    margin-left: 5rem;
+  }
+  .dark-light{
+    margin-right: 5rem;
+  }
+}
+@media screen and (min-width: 1024px){
+  /* .categories_small{
+    display: none;
+  }
+  .left-side{
+    display: block;
+  }
+  .app{
+    display: grid;
+    grid-template-rows: 10vh 1fr;
+  }
+  .wrapper{
+    display: grid;
+    grid-template-columns: 20vw 1fr;
+  }
+  .projects_header{
+    grid-area: 1/1/2/2;
+  }
+  .wrapper{
+    grid-area: 2/1/3/2;
+  }
+
+  .projects_header{
+    display: flex;
+    justify-content: space-between;
+  }
+  .header-menu{
+    padding: 0;
+    margin: 0;
+    width: 55%;
+  }
+  .work_logo{
+    width: 3rem;
+  }
+  .header-menu a{
+    font-size: var(--small-font-size);
+  }
+  .dark-light{
+    width: 3rem;
+    height: 3rem;
+  }
+  .dark-light span{
+    font-size: var(--normal-font-size);
+  }
+
+  .side-wrappers{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    border-right: 1px solid var(--border-color);
+  }
+  .side-wrapper{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+  .side-category-link{
+    border: none;
+  }
+  .side-category-link span{
+    color: var(--full-bright-color);
+  }
+  .side-title{
+    color: var(--full-bright-color);
+    position: absolute;
+    left: 2.5rem;
+  }
+  .side-icon{
+    font-size: var(--small-font-size);
+  }
+  .skill_icon_folder{
+    display: block;
+  }
+  .side-menu{
+    border: none;
+  }
+
+  .content_boxes{
+    grid-template-columns: 24vw 24vw 24vw;
+  }
+  .content-wrapper{
+    justify-self: flex-start;
+    align-self: flex-start;
+    margin-right: 10vw;
+  } */
+
+
+/*==================== WORK MODULE ====================*/
+.background_body {
+  height: 100vh;
+}
+.categories_small{
+    display: none;
+  }
+  .left-side{
+    display: block;
+  }
+
+.app {
+  background-color: var(--theme-bg-color);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 14px;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.projects_header {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  height: 58px;
+  width: 100%;
+  border-bottom: 1px solid var(--border-color);
+  padding: 0 30px;
+  white-space: nowrap;
+}
+.header-menu {
+  display: flex;
+  align-items: center;
+}
+.header-menu a {
+  padding: 20px 30px;
+  text-decoration: none;
+  color: var(--inactive-color);
+  border-bottom: 2px solid transparent;
+  transition: 0.3s;
+}
+.header-menu a.is-active,
+.header-menu a:hover {
+  color: var(--theme-color);
+  border-bottom: 2px solid var(--theme-color);
+}
+
+
+.work_logo {
+  width: 35px;
+  margin-right: 195px;
+}
+
+.wrapper {
+  display: flex;
+  flex-grow: 1;
+  overflow: hidden;
+  flex-direction: row;
+}
+
+.left-side {
+  flex-basis: 240px;
+  border-right: 1px solid var(--border-color);
+  overflow: auto;
+  flex-shrink: 0;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  color: var(--theme-color);
+  padding: 1rem 1.5rem;
+  height: 100%;
+  overflow: auto;
+  background-color: var(--theme-bg-color);
+}
+/* WORK/PHOTOGRAPHY */
+.content_boxes {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  flex-direction: column;
+}
+.content_box {
+  margin: var(--mb-0-5);
+  display: grid;
+  flex-direction: column;
+  padding: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 8rem;
+}
+.content_box:hover {
+  transform: scale(1.02);
+  background-color: var(--theme-bg-color);
+}
+.content_img{
+  grid-area: 1/1/2/4;
+}
+.content_img img{
+  width: 100%;
+}
+.content_detail{
+  margin: 0;
+  grid-area: 2/1/3/4;
+}
+.content_title{
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold);
+}
+.content_disc{
+  font-size: var(--smaller-font-size);
+}
+.content_date{
+  font-size: var(--extra-smaller-font-size);
+}
+.content_status{
+  font-size: var(--extra-smaller-font-size);
+}
+.read_more{
+  grid-area: 2/3/3/4;
+  align-self: flex-end;
+  justify-self: flex-start;
+}
+
+.projects_header{
+  display: flex;
+  justify-content: space-between;
+}
+.header-menu{
+  padding: 0;
+  margin: 0;
+}
+.work_logo{
+  margin: 0;
+  padding: 0;
+  width: 3rem;
+}
+.header-menu a{
+  font-size: var(--small-font-size);
+}
+.dark-light{
+  align-self: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: relative;
+  width: 3rem;
+  height: 3rem;
+  margin: 0;
+  padding: 0;
+}
+.dark-light span{
+  font-size: var(--normal-font-size);
+}
+.side-wrappers{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  border-right: 1px solid var(--border-color);
+}
+.side-wrapper{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+.side-category-link{
+  border: none;
+}
+.side-category-link span{
+  color: var(--theme-color);
+}
+.side-title{
+  color: var(--theme-color);
+  position: absolute;
+  left: 2.5rem;
+}
+.side-icon{
+  font-size: var(--small-font-size);
+  color: var(--theme-color);
+  font-weight: var(--font-semi-bold);
+}
+.skill_icon_folder{
+  display: block;
+}
+.side-menu{
+  border: none;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* SLUG PAGE  */
+.slug_content_box{
+  background-color: var(--theme-bg-color);
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  align-self: center;
+  justify-self: center;
+  margin: var(--mb-2) 0 var(--mb-2) 0;
+}
+.slug_heading{
+  margin-bottom: var(--mb-1);
+}
+.slug_heading h1{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-25);
+}
+.slug_heading span{
+  font-size: var(--extra-smaller-font-size);
+}
+.slug_content_img{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: .5rem;
+}
+.slug_content_detail{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.slug_creator{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: var(--extra-smaller-font-size);
+}
+.slug_creator a{
+  color: var(--theme-color);
+  text-decoration: underline;
+}
+.slug_content_disc{
+  margin: var(--mb-0-25) 0 var(--mb-0-25) 0;
+  font-size: var(--extra-smaller-font-size);
+}
+.content_status{
+  font-size: var(--extra-smaller-font-size);
+}
+
+@media screen and (min-width: 350px){
+  .slug_content_box{
+    width: 80%;
+  }
+}
+@media screen and (min-width: 568px){
+  .slug_content_box{
+    width: 70%;
+  }
+  .slug_heading h1{
+    text-align: center;
+    margin-bottom: var(--mb-2);
+    font-size: var(--h2-font-size);
+  }
+  .slug_content_detail{
+    margin-top: var(--mb-1);
+  }
+  .slug_heading span{
+    font-size: var(--small-font-size);
+  }
+  .slug_creator{
+    font-size: var(--small-font-size);
+  }
+  .slug_content_disc{
+    font-size: var(--small-font-size);
+  }
+  .content_status{
+    font-size: var(--small-font-size);
+  }
+}
+@media screen and (min-width: 778px){
+  .slug_content_img{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .slug_content_box{
+    width: 70%;
+  }
+  .slug_heading{
+    margin-bottom: var(--mb-1);
+  }
+  .slug_heading h1{
+    font-size: var(--h1-font-size);
+  }
+  .slug_heading span{
+    font-size: var(--normal-font-size);
+  }
+  .slug_creator{
+    font-size: var(--normal-font-size);
+  }
+  .slug_content_disc{
+    font-size: var(--normal-font-size);
+  }
+  .content_status{
+    font-size: var(--smaller-font-size);
+  }
+}
+@media screen and (min-width: 1024px){
+  .slug_content_box{
+    padding: 1rem;
+    border-radius: 5px;
+  }
+  .slug_heading h1{
+    text-align: start;
+    margin-bottom: var(--mb-0-5);
+    font-size: var(--h2-font-size);
+  }
+}
+
+/* scroll bar  */
+::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-bg);
+  border-radius: 10px;
+}
